--- a/config/config.yaml
+++ b/config/config.yaml
@@ -49,6 +49,10 @@ weight:
 # 增加无聊的小知识
 # 这里的 name 你可以定义任意名称，只具有显示作用，不会影响数据的处理
 platforms:
+  - id: "zaobao"
+    name: "早报"
+  - id: "xueqiu"
+    name: "雪球"
   - id: "toutiao"
     name: "今日头条"
   - id: "baidu"
